@@ -26,6 +26,7 @@
 #endif // WIN32
 
 #ifdef NEED_POSIX_TYPEDEF
+typedef unsigned char u_int8_t;
 typedef unsigned short int u_int16_t;
 typedef unsigned int u_int32_t;
 #endif
